Fix alignment

--- a/version_control/Codurance_September2020/css/modules/case-study-card.css
+++ b/version_control/Codurance_September2020/css/modules/case-study-card.css
@@ -22,7 +22,7 @@
         margin-bottom: var(--base-margin);
     }
 {% endcall %}
-{% call utils.medium_large_and_extra_large() %}
+{% call utils.small() %}
     .case-study-card {
         margin-bottom: calc(var(--base-margin) * 2);
     }
@@ -113,6 +113,9 @@
         margin-right: 20px;
         max-width: 500px;
         text-align: center;
+    }
+    .case-study-card:last-of-type {
+        margin-bottom: 0;
     }
 
     .case-study-card__card-description {
